sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: not found: value getNombreValeur
  while (i< getNombreValeur()){
            ^AlgGnomeSort:7: error: value unary_! is not a member of Int
      if (!i==0){
          ^